# emoji-joiner-rs

./: .gitignore  Cargo.toml  README.md
benches/: benchmark.rs
src/: data_text.rs  emoji_sequences_data_parser.rs  lib.rs  tree.rs
