[package]
name = "emoji-joiner"
version = "0.1.0"
edition = "2021"
authors = ["Naoki Kaneko <puripuri2100@gmail.com>"]
repository = "https://github.com/puripuri2100/emoji-joiner-rs"
description = "結合絵文字解析用のライブラリ"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.5"
regex = "1.5.4"
fancy-regex = "0.7.1"

[[bench]]
name = "benchmark"
harness = false
html_reports = true
